--- a/build.html
+++ b/build.html
@@ -39,7 +39,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">huis</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">work</a><div class="dropdown-menu"><a class="dropdown-item" href="abc.html">abeeceedarium</a><a class="dropdown-item" href="build.html">build hamburg</a><a class="dropdown-item" href="page3.html">initiaal</a><a class="dropdown-item" href="tweeluik.html">tweeluik</a><a class="dropdown-item" href="page5.html">rechthoeken</a><a class="dropdown-item" href="plaat.html">plaat</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">huis</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">work</a><div class="dropdown-menu"><a class="dropdown-item" href="harbarium grafica.html">herbarium grafica</a><a class="dropdown-item" href="istanbul ekspres.html">istanbul expres</a><a class="dropdown-item" href="initiaal.html">initiaal</a><a class="dropdown-item" href="abc.html">abeeceedarium</a><a class="dropdown-item" href="build.html">build hamburg</a><a class="dropdown-item" href="tweeluik.html">tweeluik</a><a class="dropdown-item" href="rechthoek.html">rechthoeken</a><a class="dropdown-item" href="plaat.html">plaat</a></div></li><li class="nav-item"><a class="nav-link link" href="contact.html" aria-expanded="false">contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free web site development</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-c" data-filter="false" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple html website maker software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-c" data-filter="false" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
