--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/mokatine-web.gif);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free drag and drop web page creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/mokatine-web.gif);">
 
     
 
