--- a/rechthoek.html
+++ b/rechthoek.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html web builder software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-p" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive web site design</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-p" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 40px;">
 
     
     <div class="container">
