--- a/harbarium grafica.html
+++ b/harbarium grafica.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99065182-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-u">
 
     <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
@@ -39,7 +54,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">huis</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">work</a><div class="dropdown-menu"><a class="dropdown-item" href="harbarium grafica.html">herbarium grafica</a><a class="dropdown-item" href="istanbul ekspres.html">istanbul expres</a><a class="dropdown-item" href="initiaal.html">initiaal</a><a class="dropdown-item" href="abc.html">abeeceedarium</a><a class="dropdown-item" href="build.html">build hamburg</a><a class="dropdown-item" href="tweeluik.html">tweeluik</a><a class="dropdown-item" href="rechthoek.html">rechthoeken</a><a class="dropdown-item" href="plaat.html">plaat</a></div></li><li class="nav-item"><a class="nav-link link" href="contact.html" aria-expanded="false">contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">huis</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="true" data-toggle="dropdown-submenu">2017</a><div class="dropdown-menu"><a class="dropdown-item" href="harbarium grafica.html">Herbarium Grafica</a><a class="dropdown-item" href="istanbul ekspres.html">Istanbul Ekspres</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">2016</a><div class="dropdown-menu"><a class="dropdown-item" href="initiaal.html">initiaal</a><a class="dropdown-item" href="abc.html">abeeceedarium</a><a class="dropdown-item" href="build.html">build hamburg</a><a class="dropdown-item" href="tweeluik.html">tweeluik</a><a class="dropdown-item" href="rechthoek.html">rechthoeken</a><a class="dropdown-item" href="plaat.html">plaat</a></div></li><li class="nav-item"><a class="nav-link link" href="contact.html" aria-expanded="false">contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -52,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-w" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-w" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -234,6 +249,8 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
@@ -246,5 +263,6 @@
   
   
   <input name="animation" type="hidden">
+  <input name="cookieData" type="hidden" data-cookie-text="Passop de site gebruikt cookies<a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
