--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="form1-10" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-10" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -90,7 +90,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACTEER MIJ">
 
-                        <input type="hidden" value="ZHH9nKuCknGmjchsUEYOOarOjcKDN6Cli3HxvKk5yl3qc6rU06UVm2BfWAqY3FXIgQTPdLJYaMzbRRzJbFkj9CJS+YVORIOEIzfvkAmaX0yFJ/mYvNrDyrl1Mv9ZbtyN" data-form-email="true">
+                        <input type="hidden" value="zfoYFOx1GO6DdYh2MJbdd4k/AYepkAv5l2dIplJ5lrkok42baDIAVw83W6xzCc53vX/+kOsF32Tpte+WJikOlovtI0t3zbOAXie34mMtUA8V9ToOK4H1brPB6LkA2awv" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
