--- a/istanbul ekspres.html
+++ b/istanbul ekspres.html
@@ -65,12 +65,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-t" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-t" style="background-color: rgb(255, 255, 255);">
     <div class=" container boxed-slider" style="padding-top: 120px; padding-bottom: 120px;">
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-t" class="" data-slide-to="4"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-t" class="" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-t" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center active" data-bg-video-slide="false">
@@ -107,7 +107,7 @@
                         <div class="mbr-table-cell">
                             
                             <div class="container-slide">
-                                <img src="assets/images/photo0118-01-kopie.jpg">
+                                <img src="assets/images/schermafbeelding-2017-05-28-om-21.32.24.png">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-3 text-xs-right">
                                         
